--- a/frontend_facturacion/proyecto_jas/src/app/components/ventas/ventas.component.css
+++ b/frontend_facturacion/proyecto_jas/src/app/components/ventas/ventas.component.css
@@ -1,5 +1,5 @@
 .fondo-card-1{
-    background-image: url("img/gris_oscuro.png") ;
+    background-color: #ffffff ;
 
     width: 140px;
     height: 150px;
