--- a/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/admin/inicio/inicio.component.html
@@ -1,147 +1,34 @@
-<article>
-    <div class="d-flex justify-content-end w-100">
-        <button
-            class="btn btn-secondary help"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasScrolling"
-        >
-            Mas info
-        </button>
-    </div>
-
-    <div
-        class="offcanvas offcanvas-start"
-        data-bs-scroll="true"
-        data-bs-backdrop="false"
-        tabindex="-1"
-        id="offcanvasScrolling"
-        aria-labelledby="offcanvasScrollingLabel"
-    >
-        <div class="offcanvas-header tc">
-            <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
-                ¿Que es una cuenta Adm y Cashier?
-            </h5>
-            <button
-                type="button "
-                class="btn-close"
-                data-bs-dismiss="offcanvas"
-            ></button>
-        </div>
-        <div class="offcanvas-body bkgt2">
-            <p>
-                Una cuenta ADM es aquella que tendra acceso a eliminar agregar
-                elementos y tener la infomación detallada del estado finaciero
-                del aplicativo.
-            </p>
-            <p>
-                Una cuenta cashier es muy similar a una cuenta ADM sinembargo la
-                cuenta cashier no tendra accesos alos productos agregados y
-                tampoco podra ver las gancias definitivas del aplicativo.
-            </p>
-        </div>
-    </div>
-
+<main>
     <div class="caja">
         <div class="caja2">
-            <h1 class="registro">Registrate</h1>
+            <h1 class="registro">Regístrate</h1>
 
-            <div class="cuboflotante d-flex justify-content-end">
-                <div class="cube-loader">
-                    <div class="cube-top"></div>
-                    <div class="cube-wrapper">
-                        <span style="--i: 0" class="cube-span"></span>
-                        <span style="--i: 1" class="cube-span"></span>
-                        <span style="--i: 2" class="cube-span"></span>
-                        <span style="--i: 3" class="cube-span"></span>
+            <div class="container mt-5">
+                <h2>Formulario de Registro</h2>
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
                     </div>
-                </div>
-            </div>
-            <a> Es rapido y fácil</a>
-
-            <div class="linea"></div>
-
-            <div class="row g-3">
-                <div class="col-md">
-                    <div class="nombres">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Nombre"
-                        />
+                    <div class="mb-3">
+                        <label for="apellidos" class="form-label">Apellidos</label>
+                        <input type="text" class="form-control" id="apellidos" placeholder="Apellidos" required>
                     </div>
-                </div>
-
-                <div class="col-md">
-                    <div class="form nombres">
-                        <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Apellidos"
-                        />
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo electrónico</label>
+                        <input type="email" class="form-control" id="email" placeholder="Correo electrónico" required>
                     </div>
-                </div>
-
-                <div class="row g3">
-                    <div class="col-md">
-                        <div class="form correo">
-                            <input
-                                type="email"
-                                class="form-control"
-                                placeholder="Correo electronico"
-                            />
-                        </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
                     </div>
-
-                    <div class="contraseña">
-                        <input
-                            type="password"
-                            class="form-control"
-                            placeholder="Contraseña"
-                        />
+                    <div class="mb-3">
+                        <label for="fechaNacimiento" class="form-label">Fecha de nacimiento</label>
+                        <input type="date" class="form-control" id="fechaNacimiento" required>
                     </div>
-                </div>
-            </div>
-
-            <p class="mt-3 mb-2">fecha de nacimiento</p>
-
-            <div>
-                <input
-                    type="date"
-                    class="form-control d-flex justify-content-center mb-4 w-50 place1"
-                />
-            </div>
-
-            <div class="linea2"></div>
-
-            <p class="tipo pb-0 mb-0">Tipo de usuario</p>
-
-            <div class="boton-user">
-                <div class="form-check">
-                    <input
-                        class="form-check-input"
-                        type="radio"
-                        name="flexRadioDefault"
-                    />
-                    <label class="form-check-label">
-                        <p class="Cash">Adm account</p>
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input
-                        class="form-check-input"
-                        type="radio"
-                        name="flexRadioDefault"
-                    />
-                    <label class="form-check-label" for="flexRadioDefault1">
-                        <p class="Cash">Cashier account</p>
-                    </label>
-                </div>
-            </div>
-
-            <div class="cajaboton d-flex justify-content-center">
-                <a class="botonf mt-5 btn btn-dark" href=""> Registrate </a>
+                    <button type="submit" class="btn btn-primary">Registrarse</button>
+                </form>
             </div>
         </div>
     </div>
-</article>
+</main>
