--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,102 +1,60 @@
 <section>
-    <div class="d-flex fl justify-content-lg-end p-1 nav nav-underline">
-        <div class="pe-3 nav-item">
-            <div
-                class="modal fade"
-                id="exampleModalToggle"
-                aria-hidden="true"
-                aria-labelledby="exampleModalToggleLabel"
-                tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-                    <!DOCTYPE html>
-                    <html lang="en">
-                        <head>
-                            <meta charset="utf-8" />
-                            <meta
-                                name="viewport"
-                                content="width=device-width, initial-scale=1"/>
-                            <title>Bootstrap demo</title>
-                        </head>
-                            <article class="bg-white p-3 d-flex rounded">
-                                    <div class="">
-                                        <p class="fs-1 mb-0 fw-bolder">Registrate</p>
-                                        <p class="fs-3 mt-0 fw-medium" > Es rapido y fácil</p>
-                                        <div class="linea align-items-center"></div>
-                                        <div class="row g-3">
-                                            <div class="col-md-6">
-                                                <label for="inputEmail4" class="form-label fw-medium">Nombres</label>
-                                                <input type="text" class="form-control" id="inputEmail4">
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="inputPassword4" class="form-label fw-medium">Apellidos</label>
-                                                <input type="text" class="form-control" id="inputPassword4">
-                                            </div>
-                                            <div class="col-md-6 mt-0">
-                                                <label for="inputEmail4" class="form-label fw-medium">Correo electronico</label>
-                                                <input type="email" class="form-control" id="inputEmail4">
-                                            </div>
-                                            <div class="d-flex mt-0">
-                                                <div class="col-md-6 me-2">
-                                                    <label for="inputEmail4" class="form-label fw-medium">Contraseña</label>
-                                                    <input type="email" class="form-control fw-bolder" id="inputEmail4">
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <label for="inputPassword4" class="form-label fw-medium">Confirmar contraseña</label>
-                                                    <input type="password" class="form-control fw-bolder" id="inputPassword4">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <p class="mt-3 mb-2 fw-medium">fecha de nacimiento</p>
-                                        <div>
-                                            <input
-                                                type="date"
-                                                class="form-control d-flex justify-content-center mb-4 w-50 place1"/>
-                                        </div>
-                                        <div class="cajaboton d-flex justify-content-center">
-                                            <button type="button" class="btn btn botonInicio text-white">Registrate</button>
-                                        </div>
-                                    </div>
-                            </article>
-                    </html>
-                </div>
-            </div>
-            <button
-                class="btn btn fs-5 fw-bolder"
-                data-bs-target="#exampleModalToggle"
-                data-bs-toggle="modal">
-                Registrate
-            </button>
-        </div>
-        <div class="pe-3 nav-item">
-            <div class="modal fade"id="mod2"aria-hidden="true"aria-labelledby="mod21"tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-body">
-                            <main>
-                                <section class="caja2">
-                                    <form class="mb-4 form bg-white p-4 d-flex flex-column align-items-center rounded">
-                                        <input type="text"placeholder="Correo electronico"/>
-                                        <input type="password" placeholder="Contraseña"/>
-                                        <div class="mb-3">
-                                            <a href="#" class="text-dark justify-content-center"
-                                                >¿Olvidaste la contraseña?</a>
-                                        </div>
-                                        <button type="button" class="btn btn text-white botonInicio">Iniciar sesion</button>
-                                    </form>
-                                </section>
-                            </main>
-                        </div>
-                </div>
-            </div>
-            <button class="btn btn fw-bolder fs-5" data-bs-target="#mod2"data-bs-toggle="modal">
-                Iniciar sesión
-            </button>
-        </div>
-        <div class="pe-5 nav-item">
-            <a class="text-decoration-none fw-bolder fs-5 texto1 nav-link" href=""
-                >Ayuda ?</a>
-        </div>
+
+    <!-- Button trigger modal -->
+
+
+<div class=" titulo d-flex justify-content-end align-items-center">
+    <button type="button" class="  titulo fw-bolder fs-5 btn btn- d-flex " data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Registrarse
+      </button>
+      <div class="pe-5 nav-item">
+        <a class=" titulo text-decoration-none fw-bolder fs-5 texto1 nav-link" href="">Ayuda ?</a>
     </div>
+</div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario de registro </h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="formPrincipal"(ngSubmit)="RegistroUsuario()" class=" caja-modal">
+                <span>Nombre/s</span>
+                <input type="text" id="nombre" name="nombre" required  formControlName="nombres">
+
+                <span>Apellido/s</span>
+                <input type="text" id="apellido" name="apellido" required formControlName="apellidos">
+
+                <span>Contraseña</span>
+                <input type="password" id="contrasena" name="contrasena" required>
+
+                <span>Confirmar Contraseña</span>
+                <input type="password" id="contrasena" name="contrasena" required>
+
+                <span>Fecha de Nacimiento:</span>
+                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required>
+
+                <span >Correo Electrónico:</span>
+                <input type="email" id="email" name="email" required>
+
+
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary">Registrarse</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
 </section>
+
 <div class="row">
     <div class="col-4 offset-4 columna-menu">
         <section class="d-flex justify-content-center align-items-center flex-column h-100">
@@ -104,23 +62,23 @@
             <section class="slider-opciones mt-5 slider1">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <section class="d-flex justify-content-center">
-                            <div class="carousel-item active">
-                                <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/camisa.png" class="d-block w-25" alt="...">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="img/copas.png" class="d-block w-25" alt="...">
-                            </div>
-                        </section>
+                        <div class="carousel-item active">
+                            <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/camisa.png" class="d-block w-25" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/copas.png" class="d-block w-25" alt="...">
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
@@ -129,6 +87,7 @@
         </section>
     </div>
 </div>
+
 <section class="d-flex">
     <div>
         <button class="boton1">
@@ -146,22 +105,16 @@
         </button>
     </div>
 </section>
-<script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"
-></script>
-<script
-    src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
     integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-></script>
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-></script>
+    crossorigin="anonymous"></script>
+
 <script>
     $(".slider-opciones").slick({
         slidesToShow: 1,
